tests/lean/unzip_error.lean.expected.out
unzip_error.lean:9:2: error: invalid recursive equation, left-hand-side contains meta-variable (possible solution: provide implicit parameters occurring in left-hand-side explicitly)
  match (@mk (vector A ?M_1) (vector B ?M_1) va vb)
